--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=vehicles
 spring.datasource.url=jdbc:postgresql://localhost:5432/data
 spring.datasource.username=test
 spring.datasource.password=mypassword
+server.port=8082
