--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,14 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+			<version>2.2.224</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
