--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=vehicles
 spring.datasource.url=jdbc:postgresql://localhost:5432/data
-spring.datasource.username=test
-spring.datasource.password=mypassword
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+eureka.client.register-with-eureka=false
+eureka.instance.instance-id=${spring.application.name}
+eureka.client.service-url.defaultZone=http://localhost:8084/eureka
 server.port=8082
