--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=vehicles
 spring.datasource.url=jdbc:postgresql://localhost:5432/data
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.username=test
+spring.datasource.password=mypassword
 eureka.client.register-with-eureka=false
 eureka.instance.instance-id=${spring.application.name}
 eureka.client.service-url.defaultZone=http://localhost:8084/eureka
